--- a/README
+++ b/README
@@ -7,6 +7,7 @@ API
 Variables
     logs::level
         Integer value indicating the logging verbosity level
+        Default: 0
         Valid values: 
            -1   DEBUG
             0   INFO
